[gd_scene load_steps=11 format=3 uid="uid://cxl5msyr66n4k"]

[ext_resource type="Script" uid="uid://cwflolwuuuwg" path="res://crafting_page.gd" id="1_a1mrk"]
[ext_resource type="Theme" uid="uid://cjx3jojv5j0w1" path="res://da-theme.tres" id="1_qoiri"]
[ext_resource type="Texture2D" uid="uid://0h60uhj7cgrt" path="res://art/frame1.png" id="2_a1mrk"]
[ext_resource type="Texture2D" uid="uid://bek8wgnqiex1c" path="res://art/wall_2.png" id="2_h3aea"]
[ext_resource type="Texture2D" uid="uid://dtc53n1imjkkp" path="res://art/exitButton.png" id="4_n5486"]
[ext_resource type="Texture2D" uid="uid://cg3xkswwfw46t" path="res://art/purpleGemNecklace.png" id="4_oun7a"]
[ext_resource type="Texture2D" uid="uid://brlnxymqe3xn3" path="res://art/purpleGemEarrings.png" id="5_o2tk1"]
[ext_resource type="Texture2D" uid="uid://bkd08chhp5v38" path="res://art/blue_earrings.png" id="7_lhsgc"]
[ext_resource type="Texture2D" uid="uid://bt6a0ni20cbtq" path="res://art/red_necklace.png" id="8_0cgt1"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n5486"]
texture = ExtResource("2_a1mrk")

[node name="Crafting" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a1mrk")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource("2_h3aea")

[node name="MarginLeft" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 960.0
offset_bottom = 1080.0

[node name="PanelContainer" type="PanelContainer" parent="MarginLeft"]
layout_mode = 2
theme = ExtResource("1_qoiri")

[node name="CraftButtons" type="GridContainer" parent="MarginLeft/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 50
columns = 4

[node name="earrings_purple" type="Button" parent="MarginLeft/PanelContainer/CraftButtons"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
size_flags_horizontal = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginLeft/PanelContainer/CraftButtons/earrings_purple"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 0
offset_right = 180.0
offset_bottom = 180.0
theme_override_styles/panel = SubResource("StyleBoxTexture_n5486")

[node name="TextureRect2" type="TextureRect" parent="MarginLeft/PanelContainer/CraftButtons/earrings_purple"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("5_o2tk1")
expand_mode = 2

[node name="necklace_purple" type="Button" parent="MarginLeft/PanelContainer/CraftButtons"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
size_flags_horizontal = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginLeft/PanelContainer/CraftButtons/necklace_purple"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 0
offset_right = 180.0
offset_bottom = 180.0
theme_override_styles/panel = SubResource("StyleBoxTexture_n5486")

[node name="TextureRect2" type="TextureRect" parent="MarginLeft/PanelContainer/CraftButtons/necklace_purple"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("4_oun7a")
expand_mode = 2

[node name="earrings_blue" type="Button" parent="MarginLeft/PanelContainer/CraftButtons"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
size_flags_horizontal = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginLeft/PanelContainer/CraftButtons/earrings_blue"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 0
offset_right = 180.0
offset_bottom = 180.0
theme_override_styles/panel = SubResource("StyleBoxTexture_n5486")

[node name="TextureRect2" type="TextureRect" parent="MarginLeft/PanelContainer/CraftButtons/earrings_blue"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -75.0
offset_right = 75.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("7_lhsgc")
expand_mode = 2

[node name="necklace_red" type="Button" parent="MarginLeft/PanelContainer/CraftButtons"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
size_flags_horizontal = 4

[node name="PanelContainer" type="PanelContainer" parent="MarginLeft/PanelContainer/CraftButtons/necklace_red"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 0
offset_right = 180.0
offset_bottom = 180.0
theme_override_styles/panel = SubResource("StyleBoxTexture_n5486")

[node name="TextureRect2" type="TextureRect" parent="MarginLeft/PanelContainer/CraftButtons/necklace_red"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("8_0cgt1")
expand_mode = 2

[node name="MarginRight" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 960.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginRight"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="IconsContainer" type="HBoxContainer" parent="MarginRight/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ResultContainer" type="VBoxContainer" parent="MarginRight/VBoxContainer"]
layout_mode = 2

[node name="CraftFrame" type="PanelContainer" parent="."]
layout_mode = 2
offset_left = 1307.0
offset_top = 800.0
offset_right = 1573.0
offset_bottom = 979.0
size_flags_horizontal = 4
size_flags_vertical = 12
theme = ExtResource("1_qoiri")

[node name="Craft" type="Button" parent="CraftFrame"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 100
text = "CRAFT"

[node name="ExitBuy" type="Button" parent="."]
layout_mode = 0
offset_left = 1787.0
offset_top = 24.0
offset_right = 1894.0
offset_bottom = 132.0
text = "EXIT"
icon = ExtResource("4_n5486")
icon_alignment = 1
expand_icon = true

[node name="FrameContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
offset_right = 40.0
offset_bottom = 40.0

[node name="Frame" type="PanelContainer" parent="FrameContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_qoiri")

[connection signal="pressed" from="CraftFrame/Craft" to="." method="_on_craft_pressed"]
[connection signal="pressed" from="ExitBuy" to="." method="on_exit_pressed"]
